# Kapellmeister

arduino/v0/: v0.ino
arduino/v1/: v1.ino
arduino/v2/v2/: v2.ino
kapellmeister/: CMakeLists.txt  README.md  tester.py
kapellmeister/html/: index.html
kapellmeister/html/js/: SAFE TO DELETE acquisitionSection.html
kapellmeister/include/: Kapellmeister.h  Mirror.h  RequestHandler.h
kapellmeister/src/: Kapellmeister.cpp  Mirror.cpp  RequestHandler.cpp  server.cpp
